save new alarm to DB

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,9 @@
     </ul>
   </div>
 </nav>
-
+<ul>
+  <li *ngFor="let user of users">{{ user.name }}</li>
+</ul>
 <router-outlet></router-outlet>
 </body>
 
