--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,12 @@
     <div class="col-sm-4">
       <h3>Set Alarm</h3>
       <p>Select time</p>
-        <input type="time" name="usr_time">
+	<div class='input-group date' id='datetimepicker1'>
+                    <input type='text' class="form-control" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
     </div>
     <div class="col-sm-4">
       <h3>Select color</h3>
