--- a/src/app/components/alarms/alarms.component.html
+++ b/src/app/components/alarms/alarms.component.html
@@ -1,3 +1,21 @@
+<div class="addAlarm">
 <p>
-  alarms works!
+  <button type="button" class="btn btn-outline-primary" (click)="isCollapsed = !isCollapsed"
+          [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">
+    Add alarm
+  </button>
 </p>
+<div id="collapseExample" [ngbCollapse]="isCollapsed">
+  <div class="card">
+    <div class="card-body">
+	<p><input type="checkbox" placeholder="Active" [(ngModel)]="this.newAlarm.active" [ngModelOptions]="{standalone: true}" value="">Active</p>
+	<p>Waketime<input type="text" placeholder="08:00" [(ngModel)]="this.newAlarm.waketime" [ngModelOptions]="{standalone: true}"/>
+	<p>Waking duration<input type="text" placeholder="20:00" [(ngModel)]="this.newAlarm.duration" [ngModelOptions]="{standalone: true}"/>
+	<p>Set color<input  placeholder="Color" [(ngModel)]="this.newAlarm.color" [ngModelOptions]="{standalone: true}" type="color" id="pickColor" value="#ff0000"></p>
+        <p><button class="btn btn-default" (click)="insertAlarm()">Submit</button></p>
+    </div>
+  </div>
+</div>
+</div>
+
+
