--- a/src/app/components/music/music.component.html
+++ b/src/app/components/music/music.component.html
@@ -1,3 +1,5 @@
-<p>
-  music works!
-</p>
+<input class="new-todo"
+       placeholder="What needs to be done?"
+       [(ngModel)]="newTodo"
+       (keyup.enter)="addTodo()"
+       autofocus>
