--- a/src/app/components/alarms/alarms.component.html
+++ b/src/app/components/alarms/alarms.component.html
@@ -13,52 +13,39 @@
 	<p><input type="checkbox" placeholder="Active" [(ngModel)]="this.newAlarm.active" [ngModelOptions]="{standalone: true}" value="">Active</p>
 	<p>Waketime<input type="text" placeholder="08:00" [(ngModel)]="this.newAlarm.waketime" [ngModelOptions]="{standalone: true}"/>
 	<p>Waking duration<input type="text" placeholder="20:00" [(ngModel)]="this.newAlarm.duration" [ngModelOptions]="{standalone: true}"/>
-	<p>Set color<input  placeholder="Color" [(ngModel)]="this.newAlarm.color" [ngModelOptions]="{standalone: true}" type="color" id="pickColor" value="#ff0000"></p>
+	<p>Select animation 
+        <select (change)="selectChangeHandler($event)">
+          <option value="brightness">Brightness</option>
+          <option value="iterate">Iterate</option>
+          <option value="rainbow">Rainbow</option>
+        </select>
         <p><button class="btn btn-default" (click)="insertAlarm()">Submit</button></p>
     </div>
   </div>
 </div>
 </div>
 
-<div class="col-sm-8">
-        <div class="row">
-                <div class="col-sm-2">
-                    <label for="Active">Active</label>
-                </div>
-                <div class="col-sm-2">
-                    <label for="waketime">Wakeup time</label>
-                </div>
-                <div class="col-sm-2">
-                    <label for="Duration">Wake duration</label>
-                </div>
-                <div class="col-sm-2">
-                    <label for="Color">color</label>
-                </div>
-        </div>
-        <div class="row" *ngFor="let alarm of alarms" (click)="setEditAlarm(alarm)">
-            <div class="col-sm-2">
+<div class="row-sm-1">
+        <div id="alarmFrame" class="col-sm-3" *ngFor="let alarm of alarms" (click)="setEditAlarm(alarm)">
+	  <div class="col-sm-6">
+            <div id="time" class="row-sm-1">
+              <h1>  {{alarm.waketime}}</h1>
+            </div>
+	  </div>
+	  <div class="col-sm-6">
+            <div class="row-sm-3">
                 {{alarm.active}}
             </div>
-            <div class="col-sm-2">
-                {{alarm.waketime}}
-            </div>
-            <div class="col-sm-2">
+            <div class="row-sm-3">
                 {{alarm.duration}}
             </div>
-            <div class="col-sm-2">
+            <div class="row-sm-3">
                 {{alarm.color}}
             </div>
-            <div class="col-sm-2">
+            <div class="row-sm-3">
                 <button class="btn btn-default" (click)="deleteAlarm(alarm)">Delete</button>
             </div>
+	  </div>
         </div>
 <div>
 
-<div class="form-group col-sm-2">
-    <label for="editAlarm">Edit Alarm:</label>
-    <input class="form-control" type="text" placeholder="Active" [(ngModel)]="this.editAlarm.active" [ngModelOptions]="{standalone: true}"/>
-    <input class="form-control" type="text" placeholder="Waketime" [(ngModel)]="this.editAlarm.waketime" [ngModelOptions]="{standalone: true}"/>
-    <input class="form-control" type="text" placeholder="Duration" [(ngModel)]="this.editAlarm.duration" [ngModelOptions]="{standalone: true}"/>
-    <input class="form-control" type="text" placeholder="Color" [(ngModel)]="this.editAlarm.color" [ngModelOptions]="{standalone: true}"/>
-    <button class="btn btn-default" (click)="updateAlarm()"> Edit Alarm </button>
-</div>
