--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,8 @@
   <div class="row">
     <h1>Active alarms</h1>
     <div class="col-sm-4" id="alarmFrame" *ngFor="let alarm of alarms" (click)="setEditAlarm(alarm)">
-      <div class="col-sm-6">
+     <div class="row"> 
+     <div class="col-sm-6">
 	<h2>{{alarm.waketime}}</h2>
       </div>
       <div class="col-sm-6">
@@ -16,12 +17,17 @@
 	{{alarm.color}}
       </div>
       </div>
-    </div><br>
-    <div class="col-sm-4">
+     </div>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col-md-4">
       <h1>Temperature</h1>
       {{ tempLabel }}
-    </div><br>
-    <div class="col-sm-4">
+    </div>
+
+    <div class="col-md-4">
       <h1>Light</h1>
       {{ lightLabel }}
     </div>
